First commited as before_6887_rev1